assets/style.css
/* ELEMENT STYLES */
body {
  font-family: 'Bebas Neue', sans-serif;
}

/* CLASS STYLES */
.badge {
  border-radius: 0rem;
  font-size: 100%;
}
.border {
  border: 1px solid rgba(0,0,0,.125);
  border-radius: .25rem;
  margin: 0.5rem 0.25rem;
}
.brightCloud {
  background-color: rgb(233, 114, 64);
  color: #ffffff
}
.brightCloudRev {
  color: rgb(220, 77, 59);
}
.btnBorders {
  border-left: none;
  border-radius: 0.25rem;
  border-bottom-left-radius: 0rem;
  border-top-left-radius: 0rem;
}
.card {
  border: none;
}
.card-header {
  border-bottom: none;
}
.coolCloud {
  background-color: rgb(225, 233, 233);
  color: rgb(61, 77, 69);
}
.darkSky {
  background-color: rgb(143, 138, 104);
  color: #ffffff;
}
.handwriting {
  color: darkblue;
  font-family: 'Rock Salt', cursive;
}
.handwritingRed {
  color: red;
  font-family: 'Rock Salt', cursive;
}
.jumbotron {
  background-image: url("./images/victor-rodriguez-CPFYZSvAzc8-unsplash.jpg");
  background-size: cover;
  color: #ffffff;
  padding: 0rem 1rem;
}
.list-group {
  border-radius: 0.25rem;
}
.list-group-item.active {
  background-color: rgb(61, 77, 69);
  border-color: rgb(61, 77, 69);
  color: #ffffff;
}
.minPadding {
  padding: 0.5rem;
}
.serif {
  font-family: 'Slabo 27px', serif;
}

/* UV CLASSES */
.UVLow {
  background-color: rgb(76, 146, 41);
}
.UVModerate {
  background-color: rgb(245, 227, 76);
  color: rgb(233, 114, 64);
}
.UVHigh {
  background-color: rgb(232, 100, 43);
}
.UVVeryHigh {
  background-color: rgb(200, 42, 35);
}
.UVExtreme {
  background-color: rgb(102, 79, 196);
}

/* ID STYLES */
#currentDay {
  color: rgb(255, 196, 0);
}
#weatherDisplay {
  animation: iconSize 4s infinite, wander 200s infinite;
  background: url();
  background-repeat: no-repeat !important;
}
/* KEYFRAMES */
@keyframes iconSize {
  0% {background-size: 100px;}
  50% {background-size: 90px;}
  100% {background-size: 100px;}
}
@keyframes wander {
  0% {background-position: right center;}
  25% {background-position: center bottom;}
  50% {background-position: left center;}
  75% {background-position: top center;}
  100% {background-position: right center;}
}

/* MEDIA QUERIES */
@media (min-width: 576px) {
  .rulesVH {
    border-right: 1px solid rgba(0,0,0,.125);
  }
}

@media (max-width: 575px) {
  .card-group>.card {
    margin-bottom: 0px;
  }
  .rulesVH {
    border-bottom: 1px solid rgba(0,0,0,.125);
  }
}

